--- a/_posts/2024-06-28-testblog.markdown
+++ b/_posts/2024-06-28-testblog.markdown
@@ -64,3 +64,9 @@ void SomeClass::MyFunc()
 
 
 ![](/assets/images/02_test.png) 
+
+
+
+## Video Test
+
+<iframe width="100%" height="700" src="https://www.youtube.com/embed/5AbITWPCCBc?si=1SsMxHImNluT7G_u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
