--- a/_posts/2022-10-05-EMJ.markdown
+++ b/_posts/2022-10-05-EMJ.markdown
@@ -1,7 +1,11 @@
 ---
-layout: post
+permalink: /posts/2022-10-05-EMJ/
+layout: single
 title:  "2022 Epic Mega Jam"
 date:   2022-10-05 19:46:14 -0800
+classes: wide
+sidebar:
+  nav: "docs"
 categories: 
 ---
 
