--- a/_posts/2023-09-23-GAS.markdown
+++ b/_posts/2023-09-23-GAS.markdown
@@ -1,7 +1,11 @@
 ---
-layout: post
+permalink: /posts/2023-09-23-GAS/
+layout: single
 title:  "Gameplay Ability System (GAS) in UE5"
 date:   2023-09-23 19:46:14 -0800
+classes: wide
+sidebar:
+  nav: "docs"
 categories: 
 ---
 
