--- a/_posts/2024-06-28-testblog.md
+++ b/_posts/2024-06-28-testblog.md
@@ -1,7 +1,11 @@
 ---
-layout: post
+permalink: /posts/2024-06-28-testblog/
+layout: single
 title:  "Test Blog"
 date:   2024-06-28 19:46:14 -0800
+classes: wide
+sidebar:
+  nav: "docs"
 categories: test
 ---
 
