--- a/_posts/2024-05-24-Flowmaps.markdown
+++ b/_posts/2024-05-24-Flowmaps.markdown
@@ -3,6 +3,7 @@ permalink: /posts/2024-05-24-Flowmaps/
 layout: single
 title:  "Unreal Engine: Understanding TexCoord and Flowmaps"
 date:   2024-05-24 19:46:14 -0800
+show_date: true
 classes: wide
 sidebar:
   nav: "docs"
